# milkv-duo-smart-car

./: CMakeCache.txt  CMakeLists.txt  Makefile  S99zcar  car  cmake_install.cmake  hc_sr04.cpp  hc_sr04.h  login.sh  main.cpp  main.ino  motor.cpp  motor.h  old_makefile  sensor.cpp  track_sensor.cpp  track_sensor.h
